# test-agent-desktop

./: .gitignore  README.md  pyproject.toml  setup.py
app/agent/: langgraph_workflow.py  llm_provider.py  model_generation.py  orchestrator.py  workflow.py
app/config/: config_manager.py
app/desktop/: __main__.py  main_window.py
app/documents/: pipeline.py
app/models/: entities.py
app/rag/: embeddings.py  engine.py  qdrant_index.py  vector_index.py
app/services/: application_service.py  export_service.py  result_store.py
app/skills/: runtime.py
docs/: test-agent-prd-and-architecture.md
docs/development/: architecture-roadmap.md  compact-context.md  development-log.md  final-gap-check.md  local-debug-guide.md  next-phase-plan.md  p4-plan.md  p5-rag-plan.md  skill-extension-guide.md
docs/testing/: v1-ai-agent-test-strategy.md
examples/knowledge/: api-guidelines.md  defect-history.md
examples/requirements/: online-education-requirement.md
packaging/: test-agent-desktop.spec
prompts/: model_generation.md
skills/analyze_defects/: handler.py  prompt.md  skill.yaml
tests/: test_agent_orchestrator.py  test_agent_workflow.py  test_application_model_generation.py  test_application_workflow.py  test_config_manager.py  test_document_pipeline.py  test_export_service.py  test_llm_provider.py  test_model_generation.py  test_ollama_embeddings.py  test_p3_application_ui_support.py  test_p4_case_template.py  test_p5_qdrant_vector_index.py  test_p5_vector_rag.py  test_p6_skill_integration.py  test_rag_engine.py  test_result_store.py  test_skill_runtime.py
(+7 files in other folders)
