[project]
name = "test-agent-desktop"
version = "0.1.0"
description = "Desktop AI Agent for test point and test case generation"
requires-python = ">=3.9"
dependencies = [
  "PySide6>=6.6",
  "python-docx>=1.1",
  "PyMuPDF>=1.23",
  "openpyxl>=3.1",
  "keyring>=25.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
packaging = [
  "pyinstaller>=6.0",
]
p8 = [
  "langgraph>=0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
